fixes layout bug when file or folder path wraps

--- a/src/app/components/harvest/components/metadata-review/file-row.component.scss
+++ b/src/app/components/harvest/components/metadata-review/file-row.component.scss
@@ -39,3 +39,7 @@
 baw-meta-review-whitespace {
   display: contents;
 }
+
+.filepath {
+  flex: 1;
+}
