--- a/src/app/components/harvest/components/metadata-review/folder-row.component.scss
+++ b/src/app/components/harvest/components/metadata-review/folder-row.component.scss
@@ -39,3 +39,7 @@
 baw-meta-review-whitespace {
   display: contents;
 }
+
+.folderpath {
+  flex: 1;
+}
